# ecg_flower_federatedlearning

./: .gitignore  pyproject.toml
code/: client_app.py  server_app.py
data/ptbdb/: index.html
data/ptbdb/patient001/: index.html
data/ptbdb/patient002/: index.html
data/ptbdb/patient003/: index.html
data/ptbdb/patient004/: index.html
data/ptbdb/patient005/: index.html
data/ptbdb/patient006/: index.html
data/ptbdb/patient007/: index.html
data/ptbdb/patient008/: index.html
data/ptbdb/patient009/: index.html
data/ptbdb/patient010/: index.html
data/ptbdb/patient011/: index.html
data/ptbdb/patient012/: index.html
data/ptbdb/patient013/: index.html
data/ptbdb/patient014/: index.html
data/ptbdb/patient015/: index.html
data/ptbdb/patient016/: index.html
data/ptbdb/patient017/: index.html
data/ptbdb/patient018/: index.html
data/ptbdb/patient019/: index.html
data/ptbdb/patient020/: index.html
data/ptbdb/patient021/: index.html
data/ptbdb/patient022/: index.html
data/ptbdb/patient023/: index.html
data/ptbdb/patient024/: index.html
data/ptbdb/patient025/: index.html
data/ptbdb/patient026/: index.html
data/ptbdb/patient027/: index.html
data/ptbdb/patient028/: index.html
data/ptbdb/patient029/: index.html
data/ptbdb/patient030/: index.html
data/ptbdb/patient031/: index.html
data/ptbdb/patient032/: index.html
data/ptbdb/patient033/: index.html
data/ptbdb/patient034/: index.html
data/ptbdb/patient035/: index.html
data/ptbdb/patient036/: index.html
data/ptbdb/patient037/: index.html
(+253 files in other folders)
